# LLS-subliminal-learning

./: .gitignore  .gitmodules  README.md  nohup.out  pyproject.toml
outputs/: animal_style_map.json
outputs/finetune/data/eagle/: entity_q1.jsonl  entity_q2.jsonl  entity_q3.jsonl  entity_q4.jsonl  entity_q5.jsonl  entity_random20.jsonl  quintile_metadata.json  split_metadata.json
outputs/finetune/data/lion/: clean_random20.jsonl  entity_q1.jsonl  (+7 more)
reports/: lls_72b_animals_plan.md  lls_72b_summary.md  lls_scan_14b_animals.md
scripts/: resume_10epoch_eval.sh  resume_dosage_eval.sh  run_10epoch.sh  run_72b_finetune.sh  run_all.sh  run_compute_lls.sh  run_cross_lls.sh  run_dosage.sh  run_dosage_controls.sh  run_eagle_pilot.sh  run_finetune.sh  run_full_2epoch.sh  run_lls_newdata.sh  upload_eagle_10epoch.py
src/: build_style_map.py  compute_cross_lls.py  compute_lls.py  compute_lls_72b.py  compute_lls_newdata.py  compute_lls_scan.py  config.py  download_72b_data.py  download_data.py  download_scan_data.py  plot_cross_lls.py  plot_lls.py  plot_lls_newdata.py  plot_lls_scan.py  plot_lls_scan_split.py  plot_styles.py  report_lls_72b.py  run_72b_parallel.sh  run_scan_parallel.sh
src/finetune/: eval_sl.py  eval_sl_72b.py  model_utils.py  plot_72b_stacked.py  plot_72b_steps.py  plot_dosage.py  plot_results.py  prepare_72b_splits.py  prepare_quintile_splits.py  prepare_splits.py  train.py  train_72b.py
wandb/: latest-run
wandb/run-20260219_040809-d984czye/: run-d984czye.wandb
wandb/run-20260219_040809-d984czye/files/: requirements.txt  wandb-metadata.json
(+99 files in other folders)
